[package]
name = "demo_room"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# common and engine interface need to be local for your personal machine
cimvr_common = { path = "../iteration0/common" }
cimvr_engine_interface = { path = "../iteration0/engine_interface" }
obj_parser = {path = "/home/exiled/Documents/ChatImprovr/iteration0/obj_parser"}
serde = { version = "1", features = ["derive"] }
