[package]
name = "demo_room"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# common and engine interface need to be local for your personal machine
#cimvr_common = { path = "../../../Desktop/iteration0/common" }
#cimvr_engine_interface = { path = "../../../Desktop/iteration0/engine_interface" }
#obj_reader = {path = "../../../Desktop/iteration0/obj_loader"}
cimvr_common = { git = "https://github.com/ChatImproVR/chatimprovr.git", branch = "main" }
cimvr_engine_interface  = { git = "https://github.com/ChatImproVR/chatimprovr.git", branch = "main" }
obj_reader = { git = "https://github.com/ChatImproVR/chatimprovr.git", branch = "main" }

serde = { version = "1", features = ["derive"] }
